testing/tests/ui/before_1.58/typo_in_keyword.stderr
error: problems parsing template source at row 1, column 26 near:
"endfo%}\n12345678901234567890123456789012"...
 --> $DIR/typo_in_keyword.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
